// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders not visible snackbar with content 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "#323232",
        "bottom": 0,
        "elevation": 6,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "color": "#ffffff",
                "flex": 1,
                "flexWrap": "wrap",
                "marginLeft": 24,
                "marginVertical": 14,
              },
              Object {
                "marginRight": 24,
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        Snackbar content
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with Text as a child 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "#323232",
        "bottom": 0,
        "elevation": 6,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "color": "#ffffff",
                "flex": 1,
                "flexWrap": "wrap",
                "marginLeft": 24,
                "marginVertical": 14,
              },
              Object {
                "marginRight": 24,
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          Snackbar content
        </Text>
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with action button 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "#323232",
        "bottom": 0,
        "elevation": 6,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "color": "#ffffff",
                "flex": 1,
                "flexWrap": "wrap",
                "marginLeft": 24,
                "marginVertical": 14,
              },
              Object {
                "marginRight": 0,
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        Snackbar content
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "paddingHorizontal": 24,
                "paddingVertical": 14,
              },
              Object {
                "color": "#ff4081",
                "fontFamily": "HelveticaNeue-Medium",
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        UNDO
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders snackbar with content 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "#323232",
        "bottom": 0,
        "elevation": 6,
        "opacity": 0,
        "position": "absolute",
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "opacity": 0,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
            },
            Array [
              Object {
                "color": "#ffffff",
                "flex": 1,
                "flexWrap": "wrap",
                "marginLeft": 24,
                "marginVertical": 14,
              },
              Object {
                "marginRight": 24,
              },
            ],
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#ff4081",
              "background": "#fafafa",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#ff1744",
              "paper": "#ffffff",
              "placeholder": "rgba(0, 0, 0, 0.38)",
              "primary": "#3f51b5",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 2,
          }
        }
      >
        Snackbar content
      </Text>
    </View>
  </View>
</View>
`;
